9. 影片連結輸入欄的文字：輸入YouTube影片連結(用換行區隔不同連結)，請改為輸入YouTube 或 Vimeo 影片連結(用換行區隔不同連結) 英文請改成 Paste YouTube or Vimeo video URLs to add (separate with different lines)

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -103,7 +103,8 @@
                     <div class="textarea-container">
                     <p class="textarea">
                         <span>
-                            <textarea name="videourl" id="videourl" cols="80" class="textarea" placeholder="Paste YouTube video URLs to add (separate with different lines)"></textarea>
+                            <textarea name="videourl" id="videourl" cols="80" class="textarea" 
+                            placeholder="Paste YouTube or Vimeo video URLs to add (separate with different lines)"></textarea>
                         </span>
                     </p>
                     </div>
