--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -47,6 +47,7 @@
 <script src="javascripts/v3/domready.common.js?v=411104"></script>
 <script src="javascripts/v3/domready.curation.js?v=411104"></script>
 <script src="javascripts/v3/cms.youtube-utility.js?v=411104"></script>
+<script src="javascripts/v3/cms.vimeo-utility.js?v=411104"></script>
 <script src="javascripts/v3/cms.poi-utility.js?v=411104"></script>
 <title>FLIPr.tv - Episode Curation - Curation</title>
 </head>
@@ -1204,12 +1205,11 @@
                 <a href="#!pid=${id}&ytid=${ytId}" class="warning video_ok"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Not playable on mobile device'])}</span></span></span></span></a>
             {{/if}}
         {{/if}}
-    {{else contentType === 1}}
-        {{if isInvalid || isUnplayableVideo || isEmbedLimited || isPrivateVideo || isRequesterRegionRestricted}}
-            <a href="#!pid=${id}&ytid=${ytId}" class="error"></a>
-        {{else}}
-            <a href="#!pid=${id}&ytid=${ytId}" class="video_ok"></a>
-        {{/if}}
+    {{/if}}
+    {{if isInvalid || isUnplayableVideo || isEmbedLimited || isPrivateVideo || isRequesterRegionRestricted}}
+        <a href="#!pid=${id}&ytid=${ytId}" class="error"></a>
+    {{else}}
+        <a href="#!pid=${id}&ytid=${ytId}" class="video_ok"></a>
     {{/if}}
     <p class="order"><!-- dynamic rebuild video number after template render --></p>
     <p class="img">
