POI URL欄位改成非必填, 移除 * 標示

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -690,7 +690,7 @@
                     <span class="hide charcounter">11 characters to go!</span>
                 </div>
                 <div class="fminput">
-                    <label for="hyper_link"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'poi-event', 'Hyper link'])}:</label>
+                    <label for="hyper_link">${nn._([cms.global.PAGE_ID, 'poi-event', 'Hyper link'])}:</label>
                     <p class="text"><span><input type="text" name="channelUrl" id="hyper_link" maxlength="100" value="${link}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input URL'])}" class="text" /></span></p>
                     <span class="notice">${nn._([cms.global.PAGE_ID, 'poi-event', 'Invalid URL, please try again.'])}</span>
                 </div>
