hide search feature before programs loaded

--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
 <script id="title-func-tmpl" type="text/x-jquery-tmpl">
 <h2>${nn._([cms.global.PAGE_ID, 'title-func', 'My Programs'])} (<span id="channel-counter">${$item.cntChannel}</span>)</h2>
 <div class="form-group search-input ">
-    <input class="keyword-search" type="text" placeholder="${nn._([cms.global.PAGE_ID, 'title-func', 'Search program'])}">
-    <div class="search-button btn-search"></div>
+    <input class="keyword-search disabled" disabled type="text" placeholder="${nn._([cms.global.PAGE_ID, 'title-func', 'Search program'])}">
+    <div class="search-button btn-search hide"></div>
 </div>
 
 <p class="radio-list filterType">
