--- a/app-brand.html
+++ b/app-brand.html
@@ -119,6 +119,22 @@
                             <span class="help-block text-right "><span class="words-amount">0</span> <span class="langkeyT">Best within 15 characters</span></span>
                         </div>
                     </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"> <span class="langkeyT">iOS app download link</span></label>
+                        <div class="col-sm-10">
+                            <input id="iosUrl" type="text" class="form-control wordsCount langkeyPH" placeholder="iOS app download link">
+                            <span class="help-block text-right "></span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"> <span class="langkeyT">Android app download link</span></label>
+                        <div class="col-sm-10">
+                            <input id="androidUrl" type="text" class="form-control wordsCount langkeyPH" placeholder="Android app download link" >
+                            <span class="help-block text-right "></span>
+                        </div>
+                    </div>
+
                     <hr>
                 </form>
 
