--- a/app-brand.html
+++ b/app-brand.html
@@ -20,7 +20,7 @@
         <div id="header" class="container">
             <div class="row">
 
-                <a href="http://www.flipr.tv" target="_blank" class="main-logo navbar-brand col-md-2"></a>
+                <a href="#" onclick="return false;" class="main-logo navbar-brand col-md-2"></a>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://www.flipr.tv" class="langkeyT">Link to FLIPr.tv</a></li>
 
@@ -68,7 +68,8 @@
                 <ul class="nav nav-sidebar func-nav" data-spy="affix" data-offset-top="80" data-offset-bottom="50">
                     <li><a href="portal-manage.html"><span class="icon-home"></span>  <sapn class="langkeyT">Main Channels</span></a></li>
                     <li><a href="store-promotion.html"><span class="icon-store"></span> <sapn class="langkeyT">Program Store</span></a></li>
-                    <li><a href="brand-setting.html"><span class="icon-band"></span> <sapn class="langkeyT">Brand Management</span></a></li>
+                    <li><a href="brand-setting.html"><span class="icon-band"></span> <sapn class="langkeyT">Brand Setting</span></a></li>
+                    <li class="active"><a href="app-brand.html"><span class="icon-band"></span> <sapn class="langkeyT">Brand Management</span></a></li>
                     <li><a href="app-notification.html"><span class="icon-notification"></span> <sapn class="langkeyT">Notification</span></a></li>
                 </ul>
             </div>
@@ -208,7 +209,13 @@
         <div id="SNS_${id}" data-meta="${id}" data-seq="${seq}"
              class="form-group listItem{{if id > 1407400000000}} newItem{{/if}}">
             <label class="col-sm-2 control-label SNS-Seq"></label>
-            <div class="col-sm-10">
+            <div class="col-sm-4">
+                    <p>
+                        <input type="text" class="form-control inTitleSNS" value="${title}" 
+                        placeholder="${nn._([cms.global.PAGE_ID, 'main-area', 'Input SNS name...'])}">
+                    </p>
+            </div>
+            <div class="col-sm-6">
                 <div class="input-group">
                     <input type="text" value="${link}" class="form-control inUrlSNS" 
                         placeholder="${nn._([cms.global.PAGE_ID, 'main-area', 'Input SNS link...'])}">
