add app-brand.html to sub function list

--- a/store-manage.html
+++ b/store-manage.html
@@ -67,6 +67,7 @@
                     </ul>
                 </li>
                 <li><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
+                <li><a href="app-brand.html" class="brand langkey">Brand Management</a></li>
                 <li><a id="menuNotify" href="app-notification.html" class="notification langkey">Notification</a></li>
             </ul>
         </div>
