--- a/brand-setting.html
+++ b/brand-setting.html
@@ -60,6 +60,7 @@
                 <li><a href="portal-manage.html" class="portal langkey">Main Channels</a></li>
                 <li><a href="store-promotion.html" class="store langkey">Program Store</a></li>
                 <li class="active"><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
+                <li><a href="app-brand.html" class="brand langkey">Brand Management</a></li>
                 <li><a id="menuNotify" href="app-notification.html" class="notification langkey">Notification</a></li>
 
             </ul>
