PCS info language string

--- a/app-brand.html
+++ b/app-brand.html
@@ -41,7 +41,7 @@
                 <div class="col-md-3">
                     <a href="index.html">
                         <span class="cms-icon langkeyT">CMS</span>
-                        <span class="sub-title ">Content Management System</span>
+                        <span class="sub-title langkeyT">Content Management System</span>
                     </a>
                 </div>
                     <ul class="col-md-4 list-inline list-unstyled navbar-btn text-left">
@@ -66,11 +66,11 @@
         <div class="row">
             <div class="col-md-3">
                 <ul class="nav nav-sidebar func-nav" data-spy="affix" data-offset-top="80" data-offset-bottom="50">
-                    <li><a href="portal-manage.html"><span class="icon-home"></span>  <sapn class="langkeyT">Main Channels</span></a></li>
-                    <li><a href="store-promotion.html"><span class="icon-store"></span> <sapn class="langkeyT">Program Store</span></a></li>
-                    <li><a href="brand-setting.html"><span class="icon-band"></span> <sapn class="langkeyT">Brand Setting</span></a></li>
-                    <li class="active"><a href="app-brand.html"><span class="icon-band"></span> <sapn class="langkeyT">Brand Management</span></a></li>
-                    <li><a href="app-notification.html"><span class="icon-notification"></span> <sapn class="langkeyT">Notification</span></a></li>
+                    <li><a href="portal-manage.html"><span class="icon-home"></span>  <span class="langkeyT">Main Channels</span></a></li>
+                    <li><a href="store-promotion.html"><span class="icon-store"></span> <span class="langkeyT">Program Store</span></a></li>
+                    <li><a href="brand-setting.html"><span class="icon-band"></span> <span class="langkeyT">Brand Settings</span></a></li>
+                    <li class="active"><a href="app-brand.html"><span class="icon-band"></span> <span class="langkeyT">Brand Management</span></a></li>
+                    <li><a href="app-notification.html"><span class="icon-notification"></span> <span class="langkeyT">Notification</span></a></li>
                 </ul>
             </div>
             <div class="col-md-9 main-area">
