channel add message update

--- a/channel-add.html
+++ b/channel-add.html
@@ -264,8 +264,8 @@
                 <table><tr>
                     <td style="vertical-align:top">${nn._([cms.global.PAGE_ID, 'setting-form', 'URL sample'])} : </td>
                     <td >
-                        &nbsp;https://www.youtube.com/channel/userid<br/>
-                        &nbsp;https://www.youtube.com/playlist?list=userid<br/>
+                        &nbsp;https://www.youtube.com/user/Jessie<br/>
+                        &nbsp;https://www.youtube.com/watch?v=uuZE_IRwLNI&list=RDHCwAreVUykmIA<br/>
                         &nbsp;https://vimeo.com/channels/channelid<br/>
                         &nbsp;https://vimeo.com/userid/videos<br/>
                     </td>
