--- a/channel-add.html
+++ b/channel-add.html
@@ -265,7 +265,7 @@
                     <td style="vertical-align:top">${nn._([cms.global.PAGE_ID, 'setting-form', 'URL sample'])} : </td>
                     <td >
                         &nbsp;https://www.youtube.com/user/Jessie<br/>
-                        &nbsp;https://www.youtube.com/watch?v=uuZE_IRwLNI&list=RDHCwAreVUykmIA<br/>
+                        &nbsp;https://www.youtube.com/watch?v=uuZE_IRwLNI&amp;list=RDHCwAreVUykmIA<br/>
                         &nbsp;https://vimeo.com/channels/channelid<br/>
                         &nbsp;https://vimeo.com/userid/videos<br/>
                     </td>
